--- a/website/package.json
+++ b/website/package.json
@@ -10,5 +10,8 @@
   },
   "devDependencies": {
     "docusaurus": "^1.14.0"
+  },
+  "dependencies": {
+    "@docusaurus/plugin-google-gtag": "^2.0.0-beta.9"
   }
 }
