--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -29,7 +29,7 @@ jobs:
         if: ${{ github.ref == 'refs/heads/master' && github.repository == 'Hubs-Foundation/hubs-docs' }}
         env:
           source: build/hubs-docs/
-          dest: webcontainers@web-containers.hubsfoundation.org:wordpress/hubs-docs
+          dest: webcontainers@hubsfoundation.org:wordpress/hubs-docs
         run: |
           env
           mkdir -p ~/.ssh
