--- a/scripts/docker/nginx.config
+++ b/scripts/docker/nginx.config
@@ -1,13 +1,30 @@
 server {
     listen 8080 ;
-    
+
     port_in_redirect off;
     location /docs {
         root /var/www;
         autoindex off;
         add_header 'Access-Control-Allow-Origin' '*';
     }
+    location /css {
+        root /var/www/docs;
+        autoindex off;
+        add_header 'Access-Control-Allow-Origin' '*';
+    }
+    location /js {
+        root /var/www/docs;
+        autoindex off;
+        add_header 'Access-Control-Allow-Origin' '*';
+    }
+    location /img {
+        root /var/www/docs;
+        autoindex off;
+        add_header 'Access-Control-Allow-Origin' '*';
+    }
+
     location /healthz {
         return 200 'ok';
-    }    
+    }
 }
+
